--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,30 @@ a:focus{
 	color: #FCAC45;
 }
 
+.typewriter h1{
+   overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: 2px;
+    animation: typing 1.5s steps(10, end), blink-caret .75s steps(50, end) infinite;
+}
+
+.typewriter {
+    display: inline-flex;
+}
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  80% { border-color: orange; }
+}
+
 .section-title hr{
 	border-color: #fcac45;
 	border-width: 4px;
@@ -143,6 +167,10 @@ font-weight: 900;
 .content{
 	position: relative;
 	padding: 20% 0 0;
+}
+
+.content1{
+	float:10px;
 }
 
 .color{
